--- a/fluentd-gcp-scaler/example-deployment.yaml
+++ b/fluentd-gcp-scaler/example-deployment.yaml
@@ -1,6 +1,7 @@
 # This is an example of how fluentd-gcp-scaler can be deployed. Note: this
 # example by itself won't work, you need to also set proper RBAC rules and
 # ScalingPolicy CRD.
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fluentd-gcp-scaler
@@ -24,10 +25,8 @@ spec:
         image: gcr.io/google-containers/fluentd-gcp-scaler:0.1
         command:
           - /scaler.sh
-          - --ds-name
-          - fluentd-gcp-v2.0.13
-          - --scaling-policy
-          - fluentd-gcp-scaling-policy
+          - --ds-name=fluentd-gcp-v2.0.13
+          - --scaling-policy=fluentd-gcp-scaling-policy
         env:
         # Defaults, used if no overrides are found in fluentd-gcp-scaling-policy
         - name: CPU_REQUEST
